<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AddScheduleActivity"
        android:focusableInTouchMode="true">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/start_hour"
            android:fontFamily="@font/avenir_book"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="75dp"/>
    <EditText
            android:id="@+id/etHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/ic_border"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/day"
            android:fontFamily="@font/avenir_book"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/etHour"
            android:layout_marginTop="25dp"/>
    <Button
            android:id="@+id/btnMon"
            android:text="@string/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnTue" app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/btnTue"
            android:text="@string/tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toEndOf="@+id/btnMon" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnWed" app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/btnWed"
            android:text="@string/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toEndOf="@+id/btnTue" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/btnThu"
            android:text="@string/thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnFri" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnMon"/>
    <Button
            android:id="@+id/btnFri"
            android:text="@string/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toEndOf="@+id/btnThu" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnSat" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnTue"/>
    <Button
            android:id="@+id/btnSat"
            android:text="@string/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBarra"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toEndOf="@+id/btnFri" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnWed"/>
    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/teacher"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintTop_toBottomOf="@+id/btnFri"
            android:layout_marginTop="25dp" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/etaTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/ic_border"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/student"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintTop_toBottomOf="@+id/etaTeacher"
            android:layout_marginTop="25dp" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/etaStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/ic_border"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="10dp"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:background="@color/colorMJR"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/etaStudent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:background="@color/colorBtnCancel"
            android:textColor="@color/colorTextTitle"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd"/>


</android.support.constraint.ConstraintLayout>
