<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.PackageActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBarra"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
    >

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"/>
        <TextView
                android:id="@+id/toolBar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextTitle"
                android:text="@string/package_title"
                android:fontFamily="@font/avenir_light"/>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/package_info"
            android:fontFamily="@font/avenir_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/toolBar"/>
    <TextView
            android:id="@+id/textView1"
            android:text="@string/package_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tvLevel"
            android:text="@string/package_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="50dp" app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView2"
            android:text="@string/package_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView1" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="25dp"/>
    <TextView
            android:id="@+id/tvProgram"
            android:text="@string/package_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLevel" app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView3"
            android:text="@string/package_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/tvHours"
            android:text="@string/package_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tvProgram"
            android:layout_marginTop="25dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textView4"
            android:text="@string/package_materials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tvMaterials"
            android:text="@string/package_materials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHours" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView5"
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="25dp"/>

    <TextView
            android:id="@+id/tvTeacher"
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMaterials" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorTextTitle"
            android:text="@string/update"
            android:background="@color/colorMJR"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvTeacher"
            android:layout_marginTop="50dp"/>

</android.support.constraint.ConstraintLayout>