<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ForgotPasswordActivity"
        android:focusableInTouchMode="true">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/recover_password_title"
            android:fontFamily="@font/avenir_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/textView1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:text="@string/recover_password_message"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="25dp"/>
    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTextHint"
            android:text="@string/user"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" android:layout_marginTop="50dp"/>
    <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:background="@android:color/transparent"
            android:fontFamily="@font/avenir_book"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="290dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintStart_toStartOf="@+id/etUsername"
            app:layout_constraintEnd_toEndOf="@+id/etUsername" app:layout_constraintTop_toBottomOf="@+id/etUsername"/>
    <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorTextTitle"
            android:text="@string/send"
            android:background="@color/colorMJR"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="50dp"/>

</android.support.constraint.ConstraintLayout>