<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ClassActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBarra"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
    >

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"/>
        <TextView
                android:id="@+id/toolBar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextTitle"
                android:text="@string/notification_title"
                android:fontFamily="@font/avenir_light"/>

    </android.support.v7.widget.Toolbar>


    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTextHint"
            android:text="@string/all"
            android:fontFamily="@font/avenir_book"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/toolBar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"/>
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:id="@+id/ivNotification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_notifications"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView1"/>

    <TextView
            android:id="@+id/tvNotificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/notification_info"
            android:fontFamily="@font/avenir_light"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/ivNotification" android:layout_marginStart="10dp"/>
    <TextView
            android:id="@+id/tvNotificationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorTextHint"
            android:text="@string/notification_messages"
            android:fontFamily="@font/avenir_book"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNotificationTitle"
            app:layout_constraintStart_toEndOf="@+id/ivNotification" android:layout_marginStart="10dp"/>
    <ImageView
            android:id="@+id/imageView1"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNotificationMessage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>