<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.FeedbackActivity"
        android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBarra"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"/>
        <TextView
                android:id="@+id/toolBar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextTitle"
                android:text="@string/feedback_title"
                android:fontFamily="@font/avenir_light"/>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/woym"
            android:fontFamily="@font/avenir_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/toolBar"/>

    <EditText
            android:id="@+id/etTitle"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_border"
            android:fontFamily="@font/avenir_book"
            android:ems="10"
            android:gravity="start"
            android:hint="Title:" android:textSize="18sp" android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginTop="50dp"/>

    <EditText
            android:id="@+id/etDescription"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:ems="10"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            android:background="@drawable/ic_border"
            android:fontFamily="@font/avenir_book"
            android:hint="Description:"
            android:gravity="start"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"/>
    <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorTextTitle"
            android:text="@string/send"
            android:background="@color/colorMJR"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/etDescription"/>

</android.support.constraint.ConstraintLayout>